--- a/suraj_bs-Assignment.ipynb
+++ b/suraj_bs-Assignment.ipynb
@@ -15,7 +15,7 @@
     "id": "3wwzoMzrUDtr"
    },
    "source": [
-    "##Workspace : Import and Install useful packages."
+    "##Set-up the Workspace : Import and Install useful packages."
    ]
   },
   {
